--- a/wp-content/themes/mr/scss/_navigation.scss
+++ b/wp-content/themes/mr/scss/_navigation.scss
@@ -135,8 +135,9 @@
 	@include toggles;
 	position: absolute;
 	z-index: 20;
-	top: 6.5em;
-	left: 0.5em;
+	top: 6.5em / 1.5em * 1em;
+	left: 0.5em  / 1.5em * 1em;
+	font-size: 1.5em;
 }
 
 
