--- a/wp-content/themes/mr/style.css
+++ b/wp-content/themes/mr/style.css
@@ -566,19 +566,20 @@ a {
   cursor: pointer;
   position: absolute;
   z-index: 20;
-  top: 6.5em;
-  left: 0.5em; }
+  top: 4.33333em;
+  left: 0.33333em;
+  font-size: 1.5em; }
 
-/* line 145, scss/_navigation.scss */
+/* line 146, scss/_navigation.scss */
 .post-navigation {
   padding: 1em;
   overflow: hidden;
   *zoom: 1; }
-  /* line 148, scss/_navigation.scss */
+  /* line 149, scss/_navigation.scss */
   .post-navigation a {
     color: white; }
   @media screen and (min-width: 769px) {
-    /* line 145, scss/_navigation.scss */
+    /* line 146, scss/_navigation.scss */
     .post-navigation {
       position: absolute;
       top: 6em;
@@ -586,45 +587,45 @@ a {
       right: 0;
       width: 50%; } }
 
-/* line 163, scss/_navigation.scss */
+/* line 164, scss/_navigation.scss */
 .nav-previous {
   float: left; }
-  /* line 165, scss/_navigation.scss */
+  /* line 166, scss/_navigation.scss */
   .nav-previous a {
     text-decoration: none; }
-  /* line 174, scss/_navigation.scss */
+  /* line 175, scss/_navigation.scss */
   .nav-previous span {
     vertical-align: middle; }
 
-/* line 179, scss/_navigation.scss */
+/* line 180, scss/_navigation.scss */
 .nav-next {
   float: right; }
-  /* line 181, scss/_navigation.scss */
+  /* line 182, scss/_navigation.scss */
   .nav-next a {
     text-decoration: none; }
-  /* line 191, scss/_navigation.scss */
+  /* line 192, scss/_navigation.scss */
   .nav-next span {
     vertical-align: middle; }
   @media screen and (min-width: 769px) {
-    /* line 179, scss/_navigation.scss */
+    /* line 180, scss/_navigation.scss */
     .nav-next {
       position: absolute;
       bottom: 1em; } }
 
-/* line 203, scss/_navigation.scss */
+/* line 204, scss/_navigation.scss */
 .paging-navigation {
   padding: 0 10px;
   width: 100%; }
-  /* line 207, scss/_navigation.scss */
+  /* line 208, scss/_navigation.scss */
   .paging-navigation .nav-next {
     float: right;
     position: relative;
     bottom: 0; }
-  /* line 213, scss/_navigation.scss */
+  /* line 214, scss/_navigation.scss */
   .paging-navigation a, .paging-navigation a:visited {
     color: white; }
 
-/* line 219, scss/_navigation.scss */
+/* line 220, scss/_navigation.scss */
 .post-image-nav-left,
 .post-image-nav-right {
   bottom: 0;
@@ -637,28 +638,28 @@ a {
   filter: alpha(opacity=60);
   display: inline-block; }
 
-/* line 231, scss/_navigation.scss */
+/* line 232, scss/_navigation.scss */
 .post-image-nav-left {
   right: 126px; }
 
-/* line 234, scss/_navigation.scss */
+/* line 235, scss/_navigation.scss */
 .post-image-nav-right {
   right: 0;
   background-position: 100% 0; }
 
-/* line 240, scss/_navigation.scss */
+/* line 241, scss/_navigation.scss */
 .post-image-nav-left,
 .post-image-nav-right {
   background-image: url(js/galleria/themes/marcrees/mr-controls.svg);
   background-repeat: no-repeat; }
 
-/* line 247, scss/_navigation.scss */
+/* line 248, scss/_navigation.scss */
 .post-image-nav-left:active,
 .post-image-nav-right:active {
   opacity: 1;
   filter: alpha(opacity=100); }
 
-/* line 254, scss/_navigation.scss */
+/* line 255, scss/_navigation.scss */
 .post-image-nav-left:hover,
 .post-image-nav-right:hover {
   opacity: 1;
@@ -839,6 +840,12 @@ header.site-header {
   padding: 0.5em;
   margin: 0.5em 0;
   font-size: small; }
+
+/* line 157, scss/_content.scss */
+blockquote {
+  font-style: italic;
+  border-left: 3px solid #dd773f;
+  padding-left: 1em; }
 
 /* line 1, scss/_media.scss */
 .galleria-wrapper {
