--- a/wp-content/themes/mr/scss/_navigation.scss
+++ b/wp-content/themes/mr/scss/_navigation.scss
@@ -49,7 +49,7 @@
 	  // position: absolute;
 	  // top: 0.2rem;
 	  // right: 0.4rem;
-	  width: 3.6em;
+	  width: 4em;
 	  display: inline-block;
 		float: right;
 		margin: 2.1em 1em 2.1em 1em;
@@ -63,18 +63,20 @@
 	  display: inline-block;
 	  // float:right;
 	  background-color: adjust-lightness($color-ground, 10);
-	  width: 1.8em;
+	  width: 2em;
 	  height: 1.8em;
 	  text-align: center;
+	  text-transform: capitalize;
 	  // margin-top: 2em;
+
 	}
 
 	.switch:first-child {
-	  border-radius: 50% 0 0 50%;
+	  border-radius: 20% 0 0 20%;
 	}
 
 	.switch:last-child {
-	  border-radius: 0 50% 50% 0;
+	  border-radius: 0 20% 20% 0;
 
 	}
 
