--- a/wp-content/themes/mr/style.css
+++ b/wp-content/themes/mr/style.css
@@ -486,7 +486,7 @@ a {
           float: right; } }
   /* line 48, scss/_navigation.scss */
   .header-menu .switcher {
-    width: 3.6em;
+    width: 4em;
     display: inline-block;
     float: right;
     margin: 2.1em 1em 2.1em 1em;
@@ -497,36 +497,37 @@ a {
     line-height: 1.8;
     display: inline-block;
     background-color: #004165;
-    width: 1.8em;
+    width: 2em;
     height: 1.8em;
-    text-align: center; }
-  /* line 72, scss/_navigation.scss */
+    text-align: center;
+    text-transform: capitalize; }
+  /* line 74, scss/_navigation.scss */
   .header-menu .switch:first-child {
-    border-radius: 50% 0 0 50%; }
-  /* line 76, scss/_navigation.scss */
+    border-radius: 20% 0 0 20%; }
+  /* line 78, scss/_navigation.scss */
   .header-menu .switch:last-child {
-    border-radius: 0 50% 50% 0; }
-  /* line 81, scss/_navigation.scss */
+    border-radius: 0 20% 20% 0; }
+  /* line 83, scss/_navigation.scss */
   .header-menu .switch.switchactive {
     background-color: #8ac1af;
     color: #002032; }
 
-/* line 88, scss/_navigation.scss */
+/* line 90, scss/_navigation.scss */
 .header-menu input[type=checkbox] ~ ul {
   max-height: 0;
   overflow: hidden;
   transition: 0.3s; }
   @media screen and (min-width: 769px) {
-    /* line 88, scss/_navigation.scss */
+    /* line 90, scss/_navigation.scss */
     .header-menu input[type=checkbox] ~ ul {
       max-height: 13em; } }
 
-/* line 96, scss/_navigation.scss */
+/* line 98, scss/_navigation.scss */
 .header-menu input[type=checkbox]:checked ~ ul {
   max-height: 24em;
   overflow: hidden; }
 
-/* line 101, scss/_navigation.scss */
+/* line 103, scss/_navigation.scss */
 .showmenu-label {
   pointer-events: auto;
   color: white;
@@ -541,15 +542,15 @@ a {
   .showmenu-label:hover {
     background-color: #00304c; }
   @media screen and (min-width: 769px) {
-    /* line 101, scss/_navigation.scss */
+    /* line 103, scss/_navigation.scss */
     .showmenu-label {
       display: none; } }
 
-/* line 111, scss/_navigation.scss */
+/* line 113, scss/_navigation.scss */
 .showmenu {
   display: none; }
 
-/* line 134, scss/_navigation.scss */
+/* line 136, scss/_navigation.scss */
 .content-toggle {
   font-family: Georgia, serif;
   font-weight: bold;
@@ -570,16 +571,16 @@ a {
   left: 0.33333em;
   font-size: 1.5em; }
 
-/* line 146, scss/_navigation.scss */
+/* line 148, scss/_navigation.scss */
 .post-navigation {
   padding: 1em;
   overflow: hidden;
   *zoom: 1; }
-  /* line 149, scss/_navigation.scss */
+  /* line 151, scss/_navigation.scss */
   .post-navigation a {
     color: white; }
   @media screen and (min-width: 769px) {
-    /* line 146, scss/_navigation.scss */
+    /* line 148, scss/_navigation.scss */
     .post-navigation {
       position: absolute;
       top: 6em;
@@ -587,45 +588,45 @@ a {
       right: 0;
       width: 50%; } }
 
-/* line 164, scss/_navigation.scss */
+/* line 166, scss/_navigation.scss */
 .nav-previous {
   float: left; }
-  /* line 166, scss/_navigation.scss */
+  /* line 168, scss/_navigation.scss */
   .nav-previous a {
     text-decoration: none; }
-  /* line 175, scss/_navigation.scss */
+  /* line 177, scss/_navigation.scss */
   .nav-previous span {
     vertical-align: middle; }
 
-/* line 180, scss/_navigation.scss */
+/* line 182, scss/_navigation.scss */
 .nav-next {
   float: right; }
-  /* line 182, scss/_navigation.scss */
+  /* line 184, scss/_navigation.scss */
   .nav-next a {
     text-decoration: none; }
-  /* line 192, scss/_navigation.scss */
+  /* line 194, scss/_navigation.scss */
   .nav-next span {
     vertical-align: middle; }
   @media screen and (min-width: 769px) {
-    /* line 180, scss/_navigation.scss */
+    /* line 182, scss/_navigation.scss */
     .nav-next {
       position: absolute;
       bottom: 1em; } }
 
-/* line 204, scss/_navigation.scss */
+/* line 206, scss/_navigation.scss */
 .paging-navigation {
   padding: 0 10px;
   width: 100%; }
-  /* line 208, scss/_navigation.scss */
+  /* line 210, scss/_navigation.scss */
   .paging-navigation .nav-next {
     float: right;
     position: relative;
     bottom: 0; }
-  /* line 214, scss/_navigation.scss */
+  /* line 216, scss/_navigation.scss */
   .paging-navigation a, .paging-navigation a:visited {
     color: white; }
 
-/* line 220, scss/_navigation.scss */
+/* line 222, scss/_navigation.scss */
 .post-image-nav-left,
 .post-image-nav-right {
   bottom: 0;
@@ -638,28 +639,28 @@ a {
   filter: alpha(opacity=60);
   display: inline-block; }
 
-/* line 232, scss/_navigation.scss */
+/* line 234, scss/_navigation.scss */
 .post-image-nav-left {
   right: 126px; }
 
-/* line 235, scss/_navigation.scss */
+/* line 237, scss/_navigation.scss */
 .post-image-nav-right {
   right: 0;
   background-position: 100% 0; }
 
-/* line 241, scss/_navigation.scss */
+/* line 243, scss/_navigation.scss */
 .post-image-nav-left,
 .post-image-nav-right {
   background-image: url(js/galleria/themes/marcrees/mr-controls.svg);
   background-repeat: no-repeat; }
 
-/* line 248, scss/_navigation.scss */
+/* line 250, scss/_navigation.scss */
 .post-image-nav-left:active,
 .post-image-nav-right:active {
   opacity: 1;
   filter: alpha(opacity=100); }
 
-/* line 255, scss/_navigation.scss */
+/* line 257, scss/_navigation.scss */
 .post-image-nav-left:hover,
 .post-image-nav-right:hover {
   opacity: 1;
