--- a/wp-content/themes/mr/scss/_navigation.scss
+++ b/wp-content/themes/mr/scss/_navigation.scss
@@ -72,11 +72,11 @@
 	}
 
 	.switch:first-child {
-	  border-radius: 20% 0 0 20%;
+	  // border-radius: 20% 0 0 20%;
 	}
 
 	.switch:last-child {
-	  border-radius: 0 20% 20% 0;
+	  // border-radius: 0 20% 20% 0;
 
 	}
 
@@ -137,9 +137,9 @@
 	@include toggles;
 	position: absolute;
 	z-index: 20;
-	top: 6.5em / 1.5em * 1em;
-	left: 0.5em  / 1.5em * 1em;
-	font-size: 1.5em;
+	top: 6.5em;
+	left: 0.5em;
+	font-size: 1em;
 }
 
 
