--- a/wp-content/themes/mr/scss/_navigation.scss
+++ b/wp-content/themes/mr/scss/_navigation.scss
@@ -23,7 +23,7 @@
 		position:absolute;
   		left:0;
   		right:0;
-  		top:100%;
+  		top: 6em; //was 100% - failed in live for some reason
 		list-style:none;
 		padding:0;
 		margin:0;
@@ -36,11 +36,11 @@
 
 		a, .active{
 			@include menuitem;
-			@include media(momma){
-				display:inline-block;
-				float:right;
+				@include media(momma){
+					display:inline-block;
+					float:right;
+			}
 		}
-	}
 	}
 
 
